--- a/kerek.css
+++ b/kerek.css
@@ -633,14 +633,15 @@ section {grid-area: slide;
 
 footer {grid-area: footer;}
 .footer-distributed{background: rgb(34,193,195);
-  background: linear-gradient(  0deg, rgb(10,62,87,1) 40%, rgba(6, 179, 182) 84%);
+            background: linear-gradient(  0deg, rgb(10,62,87,1) 40%, rgba(6, 179, 182) 84%);
             box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
             box-sizing: border-box;
             width: 100%;
             height: 300px;
             text-align: left;
             font: bold 16px sans-serif;
-            padding: 55px 50px 0px 55px;}
+            padding: 55px 50px 0px 55px;
+          font-family: 'Times New Roman', Times, serif;}
         .footer-distributed .footer-left,
         .footer-distributed .footer-center,
         .footer-distributed .footer-right{display: inline-block;vertical-align: top;}
